Correctly name package

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "undularity-commonjs",
+  "name": "undum-commonjs",
   "version": "3.0.0",
   "description": "A game framework for building hypertext interactive ficiton.",
   "license": "MIT",
