--- a/package.json
+++ b/package.json
@@ -6,18 +6,39 @@
   "author": {
     "name": "Ian Millington",
     "email": "idmillington@googlemail.com"
-    },
+  },
   "contributors": [
-    { "name": "Alexander Yakovlev" },
-    { "name": "Andrew Plotkin" },
-    { "name": "Bruno Dias" },
-    { "name": "David Eik" },
-    { "name": "Ivan Narozhny" },
-    { "name": "Juhana Leinonen" },
-    { "name": "Michael Neal Tenuis" },
-    { "name": "Selene" }
-    ],
-  "files": ["lib"],
+    {
+      "name": "Alexander Yakovlev"
+    },
+    {
+      "name": "Andrew Plotkin"
+    },
+    {
+      "name": "Bruno Dias"
+    },
+    {
+      "name": "David Eik"
+    },
+    {
+      "name": "Ivan Narozhny"
+    },
+    {
+      "name": "Juhana Leinonen"
+    },
+    {
+      "name": "Michael Neal Tenuis"
+    },
+    {
+      "name": "Selene"
+    }
+  ],
+  "files": [
+    "lib"
+  ],
   "main": "lib/undum.js",
-  "private": true
+  "private": true,
+  "dependencies": {
+    "jquery": "^2.1.3"
+  }
 }
